added smaller logo and edited manifest

--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
     "AppDescription": "Collaborative and social party playlist",
     "AppIcon": "",
     "SupportedLanguages": ["en"],
-    "VendorIdentifier": "com.justTheTip",
+    "VendorIdentifier": "com.QueueUp",
 
     "DefaultTabs": [
         {
